--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://127.0.0.1:16059/secret" />
+<meta http-equiv="refresh" content="0; url=http://62.173.140.174:16059" />
